--- a/styles/large.css
+++ b/styles/large.css
@@ -36,6 +36,16 @@
        display: flex;
        justify-content: left;
        padding: 20px 0;
-     }
+    }
+    
+    .recipe-list {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
    }
+
+   @media only screen and (min-width: 1025px) {
+    .recipe-list {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
  
