--- a/styles/medium.css
+++ b/styles/medium.css
@@ -21,5 +21,14 @@
       gap: 20px;
       margin: 0;
     }
+
+    .recipe-list {
+      grid-template-columns: 1fr 1fr;
+    }
     
    } 
+   @media only screen and (min-width: 769px) and (max-width: 1024px) {
+      .recipe-list {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
