--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,8 +17,8 @@
 }
 
 .recipe-image {
-  width: 150px; /* Adjust image size */
-  height: 150px; /* Adjust image size */
+  width: 300px; 
+  height: 300px; 
   margin-right: 10px;
   border-radius: 5px;
   /* Additional styling properties for the image */
@@ -26,6 +26,11 @@
 
 .recipe-details {
   flex-grow: 1;
+}
+
+.recipe-list {
+  display: grid;
+  gap: 20px;
 }
 
 .recipe-title {
@@ -172,8 +177,8 @@ p, h1,h3,h4 {
 }
 img {
   border-radius: 10px;
-  width: 95px;
-  height: 95px;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
   margin: 10px;
 }
@@ -182,6 +187,12 @@ body {
   background-image: url("/uploads/back2.jpg");
   background-color: transparent;
 
+}
+
+@media only screen and (max-width: 768px) {
+  .recipe-list {
+    grid-template-columns: 1fr;
+  }
 }
 
 
